# ContFreeGram

./: .env.sample  .gitignore  Cargo.toml  ContFreeGram.env  README.md
src/: groqApi.rs  groq_api.rs  main.rs  menuInterface.rs
